k8s-network/v2/ingress/urlrewrite-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: web
        image: cnych/todo:v1.1
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  type: ClusterIP
  ports:
  - name: web
    port: 3000
    targetPort: 3000

---


# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: todo
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-http01"
# spec:
#   rules:
#   - host: todo.demonwang.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: todo
#           servicePort: 3000
#   tls:
#   - hosts:
#     - todo.demonwang.com
#     secretName: todo-tls

# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: todo
#   annotations:
#     kubernetes.io/ingress.class: "nginx"

#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/app-root: /app
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#       rewrite ^/stylesheets/(.*)$ /app/stylesheets/$1 redirect;  # 添加 /app 前缀
#       rewrite ^/images/(.*)$ /app/images/$1 redirect;  # 添加 /app 前缀
# spec:
#   rules:
#   - host: todo.demonwang.com
#     http:
#       paths:
#       - path: /app(/|$)(.*)
#         backend:
#           serviceName: todo
#           servicePort: 3000


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: todo.demonwang.com
    http:
      paths:
      - path: /
        backend:
          serviceName: todo
          servicePort: 3000
  tls:
  - hosts:
    - "*.demonwang.com"
    secretName: demonwang-com-tls
